Basis is klaar, nu nog wat extra's :)

--- a/styleguide.html
+++ b/styleguide.html
@@ -12,23 +12,18 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Bad+Script" rel="stylesheet">
 
 </head>
+
 <body>
-
-
-	<!-- 
-		6.32
-		6.33
-	 -->
-
-	<div>
+	 
+	<!-- <div>
 		<div>
 			<span></span>
 			<span></span>
 			<span></span>
 		</div>
 		<h1>Welkom Marijn</h1>
-	</div>
-
+	</div> -->
+	
 
 	<nav>
 
@@ -49,7 +44,6 @@
 	        </li>
 	        <li><a href="/about">About</a></li>
 	        <li><a href="/contact">Contact</a></li>
-
 
 	    </ul>
 
@@ -102,7 +96,7 @@
 				<h1>Beach</h1>
 			</a>
 
-			<p><em>V</em>estibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis.</p>
+			<p><em>V</em>estibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit.</p>
 			<fieldset>
 			    <legend>Rating</legend>
 			    <input type="radio" name="rating" id="rating-0"
@@ -206,7 +200,7 @@
 				<h1>Floating village</h1>
 			</a>
 
-			<p><em>V</em>estibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</p>
+			<p><em>A</em>nte ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia.</p>
 
 			<fieldset>
 			    <legend>Rating</legend>
@@ -241,7 +235,7 @@
 				<h1>Surfing</h1>
 			</a>
 
-			<p><em>S</em>ed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla.</p>
+			<p><em>S</em>ed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien.</p>
 
 			<fieldset>
 			    <legend>Rating</legend>
@@ -276,7 +270,7 @@
 				<h1>Atlanta</h1>
 			</a>
 
-			<p><em>E</em>tiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
+			<p><em>E</em>tiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus.</p>
 
 			<fieldset>
 			    <legend>Rating</legend>
@@ -311,7 +305,7 @@
 				<h1>Cabin by the lake</h1>
 			</a>
 
-			<p><em>L</em>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+			<p><em>L</em>orem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
 
 			<fieldset>
 			    <legend>Rating</legend>
