--- a/styleguide.html
+++ b/styleguide.html
@@ -15,14 +15,14 @@
 
 <body>
 	 
-	<!-- <div>
+	<div>
 		<div>
 			<span></span>
 			<span></span>
 			<span></span>
 		</div>
 		<h1>Welkom Marijn</h1>
-	</div> -->
+	</div>
 	
 
 	<nav>
